--- a/rose_picker/Makefile
+++ b/rose_picker/Makefile
@@ -11,4 +11,4 @@ test: export GPL_DIR ?= $(ROOT_DIR)/GPL
 test: export GPL_PYTHON_LIB ?= $(GPL_DIR)/lib/python
 test: PYTHONPATH:=$(PYTHONPATH):./:$(GPL_PYTHON_LIB)
 test:
-	python2.7 -m unittest discover -p '*test.py'
+	python2.7 -m unittest discover -p '*test.py' --verbose
