ticket:1924 for Iva Kavcic: Use "python" rather than "python27" in all Python scripts.
git-svn-id: https://metomi/svn/lfric.xm/LFRic/trunk/GPL@20017 4bbb03d4-c1cc-11e1-9ca4-71d347b01581

--- a/rose_picker/Makefile
+++ b/rose_picker/Makefile
@@ -22,4 +22,4 @@ test: export GPL_DIR ?= $(ROOT_DIR)/GPL
 test: export GPL_PYTHON_LIB ?= $(GPL_DIR)/lib/python
 test: PYTHONPATH:=$(PYTHONPATH):./:$(GPL_PYTHON_LIB)
 test:
-	python2.7 -m unittest discover -p '*test.py' --verbose
+	python -m unittest discover -p '*test.py' --verbose
