--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -20,16 +20,16 @@ concurrency:
 
 jobs:
   checks:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-24.04"
     timeout-minutes: 5
     env:
-      UV_PYTHON: '3.15'
+      UV_PYTHON: '3.12.5'
       VENV_PATH: '.venv'
 
     steps:
       - uses: actions/checkout@v6
 
-      - name: Install uv
+      - name: Setup uv
         uses: astral-sh/setup-uv@v7
         with:
           python-version: ${{ env.UV_PYTHON }}
@@ -47,19 +47,15 @@ jobs:
       - name: Install dependencies
         run: uv sync --locked --all-extras --dev
 
-      - name: Run ruff linting
+      - name: Lint Python code
         if: always()
         run: uv run ruff check .
 
-      - name: Run ruff format check
+      - name: Format Python code
         if: always()
         run: uv run ruff format --check .
 
-      # - name: Run mypy type checking
-      #   if: always()
-      #   run: uv run mypy source/rose_picker
-
-      - name: Run tests
+      - name: Run Python tests
         if: always()
         run: uv run pytest tests
 
